# AI-capstone-project

./: .gitignore  Cargo.toml  README.md  build.sh  env.example  toolkit_documentation.md
examples/: test_client.rs
scripts/: setup.sh  test.sh
src/: lib.rs  main.rs
src/handlers/: ai_handler.rs  mod.rs
src/models/: request.rs  response.rs
src/services/: langchain_service.rs  mod.rs  prompt_service.rs
src/utils/: config.rs  mod.rs  validation.rs
static/: index.html
tests/: integration_tests.rs
