[package]
name = "ai-tutor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "An AI-powered tutoring application built with Rust"
license = "MIT"

[[bin]]
name = "ai-tutor"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
dotenv = "0.15"
regex = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "test_client"
path = "examples/test_client.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"